Alignment fix of placeholder image in products list

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1515,6 +1515,10 @@ hr {
                 color: @color-swatch3;
             }
         }
+
+        .ecom-productslist-image {
+            margin: 0 auto;
+        }
     }
 
 
